-- Consolidate tables.sql
-- Clean up existing tables (Drop in reverse dependency order)
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE invoices CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE meeting_participants CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE meetings CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
-- Dropping team_members as part of cleanup
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE team_members CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE tasks CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE proposals CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE contacts CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE clients CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
-- Dropping teams table as part of cleanup
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE teams CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/
BEGIN
    EXECUTE IMMEDIATE 'DROP TABLE users CASCADE CONSTRAINTS';
EXCEPTION WHEN OTHERS THEN NULL;
END;
/

-- Create Tables

CREATE TABLE users (
    user_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    role VARCHAR2(20) NOT NULL CHECK (role IN ('admin', 'pm', 'client', 'developer')),
    email VARCHAR2(255) NOT NULL UNIQUE,
    name VARCHAR2(255) NOT NULL,
    password VARCHAR2(255) NOT NULL,
    is_active NUMBER(1,0) DEFAULT 1 NOT NULL CHECK (is_active IN (0, 1))
);

CREATE TABLE clients (
    client_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    user_id NUMBER NOT NULL,
    company_name VARCHAR2(255) NOT NULL,
    industry VARCHAR2(255),
    timezone VARCHAR2(50),
    CONSTRAINT fk_clients_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

CREATE TABLE contacts (
    contact_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    user_id NUMBER NOT NULL,
    client_id NUMBER,
    full_name VARCHAR2(255) NOT NULL,
    email VARCHAR2(255) NOT NULL,
    phone VARCHAR2(50),
    contact_type VARCHAR2(50) CHECK (contact_type IN ('primary', 'secondary', 'tertiary')),
    CONSTRAINT fk_contacts_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_contacts_client
        FOREIGN KEY (client_id)
        REFERENCES clients(client_id)
);

CREATE TABLE proposals (
    proposal_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    client_id NUMBER NOT NULL,
    pm_user_id NUMBER,
    title VARCHAR2(255) NOT NULL,
    description CLOB,
    estimated_hours NUMBER,
    actual_hours NUMBER,
    value NUMBER,
    status VARCHAR2(50) CHECK (status IN ('draft', 'submitted', 'approved', 'rejected', 'active', 'completed')),
    admin_comments CLOB,
    srs_approved NUMBER(1,0) DEFAULT 0 NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    expected_close DATE,
    actual_close DATE,
    functional_requirements CLOB,
    non_functional_requirements CLOB,
    client_comments CLOB,
    CONSTRAINT fk_proposals_client
        FOREIGN KEY (client_id)
        REFERENCES clients(client_id),
    CONSTRAINT fk_proposals_pm_user
        FOREIGN KEY (pm_user_id)
        REFERENCES users(user_id)
);

CREATE TABLE tasks (
    task_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    proposal_id NUMBER NOT NULL,
    parent_task_id NUMBER,
    locked_by NUMBER,
    title VARCHAR2(255) NOT NULL,
    description CLOB,
    status VARCHAR2(50) CHECK (status IN ('todo', 'in_progress', 'done')),
    due_date DATE,
    completed_date DATE,
    priority VARCHAR2(50) DEFAULT 'Medium' NOT NULL CHECK (priority IN ('Low', 'Medium', 'High')),
    CONSTRAINT fk_tasks_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id),
    CONSTRAINT fk_tasks_parent 
        FOREIGN KEY (parent_task_id) 
        REFERENCES tasks(task_id) ON DELETE CASCADE,
    CONSTRAINT fk_tasks_locked_by
        FOREIGN KEY (locked_by)
        REFERENCES users(user_id)
);

CREATE TABLE meetings (
    meeting_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    proposal_id NUMBER NOT NULL,
    meeting_type VARCHAR2(50),
    scheduled_date DATE NOT NULL,
    subject VARCHAR2(255),
    minutes_of_meeting CLOB,
    status VARCHAR2(50) CHECK (status IN ('scheduled', 'completed', 'cancelled')),
    CONSTRAINT fk_meetings_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id)
);

CREATE TABLE meeting_participants (
    participant_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    meeting_id NUMBER NOT NULL,
    user_id NUMBER NOT NULL,
    attendance VARCHAR2(50) CHECK (attendance IN ('invited', 'attended', 'absent')),
    CONSTRAINT fk_mp_meeting
        FOREIGN KEY (meeting_id)
        REFERENCES meetings(meeting_id),
    CONSTRAINT fk_mp_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

CREATE TABLE invoices (
    invoice_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    client_id NUMBER NOT NULL,
    proposal_id NUMBER,
    amount NUMBER NOT NULL,
    issue_date DATE NOT NULL,
    due_date DATE NOT NULL,
    status VARCHAR2(50) CHECK (status IN ('pending', 'paid', 'overdue', 'cancelled')) NOT NULL,
    CONSTRAINT fk_invoices_client
        FOREIGN KEY (client_id)
        REFERENCES clients(client_id),
    CONSTRAINT fk_invoices_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id)
);